--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
   </head>
   <body style="   background: linear-gradient(224deg, #22c76e, #53a9b1); background-size: 400% 400%; -webkit-animation: Green 30s ease infinite; -moz-animation: Green 30s ease infinite; animation: Green 30s ease infinite;">
     <div style="margin: auto; width: 600px;  background-color: white; border: 10px solid #22c76e; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
-      <h1 style="padding: 0; margin: 0; color: #DD4723">Dan Voronov
-        / Дан Вóронов</h1>
+      <h1 style="font-size: 28pt; padding: 0; margin: 0; color: #DD4723">Dan Voronov / Дан Вóронов</h1>
       <br>
       <i>For the past 10 years, I’ve been working on designing experiences and
         journeys that touch people's inner Self.</i><br>
@@ -42,36 +41,31 @@
           href="art/film/">film</a>
         and <a href="art/theater/">theater</a> projects. And my infinite love to
         sound in the <a href="art/music/">electro-musical</a> projects.</p>
-      <p style="line-height: 18pt; font-size: 14pt;"><br>
-      </p>
-      <p style="line-height: 18pt; font-size: 14pt;"> <em>As a teenager I
+      <p style="line-height: 18pt; font-size: 12pt;">As a teenager I
           played guitar and drums, wrote poems and stories. I photographed on
           the "Zenit" camera. Then it became the basis for <a href="art/early/">early
-            artworks</a>.</em><br>
+            artworks</a>.<br>
       </p>
-      <br>
+      <br><br>
       <div style="text-align: center;"><a style="border-bottom: 0px" href="dan-files/i/under_the_brdge_f.jpg"
           target="_blank"><img
             src="dan-files/i/under_the_brdge.jpg"
             style="height: 600px;"></a><br>
       </div>
-      <div style="text-align: center;"><br>
-      </div>
-      <div style="text-align: center;"><br>
-      </div>
+      <br><br><br>
       <h2 style="padding: 0; margin: 0; color: gray"><a href="now/">NOW</a>
         &nbsp;&nbsp;&nbsp;<a href="achivments/">BESIDE ART</a> &nbsp;&nbsp;&nbsp;<a
-          href="ru/">СТАТЬИ (ru)</a>
+          href="ru/">(/ru) СТАТЬИ</a>
         &nbsp;&nbsp;&nbsp;<a href="about/">ABOUT ME</a> </h2>
-      <div style="padding-top: 25px">
+      <div style="padding-top: 45px">
         <hr style="border:0; border-top: 2px dotted lightgray"></div>
-      <p style="font-size: 14pt; padding-top: 3px">Feel free to <a href="mailto:dan.voronov@pm.me">mail</a>
+      <p style="font-size: 14pt; padding-top: 3px">Feel free to <a href="mailto:dan.voronov@pm.me">mail</a> or <a target="_blank" href="https://t.me/dan_voronov">telegram</a>
         me and follow in:</p>
-      <p style="font-size: 14pt">&gt; <a target="_blank" href="https://www.goodreads.com/dankievua">goodreads</a>
-        &gt; <a target="_blank" href="https://www.instagram.com/danyil.voronov/">instagram</a>
+      <p style="font-size: 14pt">&gt; <a target="_blank" href="https://www.goodreads.com/danvoronov">goodreads (reading list)</a>
         &gt; <a target="_blank" href="https://www.youtube.com/user/DanVoronov/videos">youtube</a>
+        &gt; <a target="_blank" href="https://t.me/dv_prj">telegram (public)</a>
       </p>
-      <span style="font-size: 80%"></span> <br>
+      <span style="font-size: 80%"></span>
     </div>
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
