--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Dan Voronov</title>
     <meta name="description" content="Personal site of Dan Voronov, artist.">
     <meta name="author" content="Dan Voronov">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet"> 
     <style type="text/css">
         @-webkit-keyframes Green {
           0%{background-position:0% 50%}
@@ -21,18 +22,72 @@
           50%{background-position:100% 50%}
           100%{background-position:0% 50%}
       }
+      .yellow-highlight {
+  text-shadow: 
+    -3px 0px 3px yellow,
+     3px 0px 3px yellow,
+     6px 0px 6px yellow,
+    -6px 0px 6px yellow;
+}
+.blue-highlight {
+  text-shadow: 
+     3px 0px 3px blue,
+    -3px 0px 3px blue,
+     6px 0px 6px blue,
+    -6px 0px 6px blue;
+
+}
+/* unvisited link */
+a:link, a:visited {
+  color: #6a1b9a;
+}
+
+/* mouse over link */
+a:hover {
+  color: yellow;
+}
+
+/* selected link */
+a:active {
+  color: blue;
+}
   </style>
   </head>
-  <body style="   background: linear-gradient(224deg, #22c76e, #53a9b1); background-size: 400% 400%; -webkit-animation: Green 30s ease infinite; -moz-animation: Green 30s ease infinite; animation: Green 30s ease infinite;">
-    <div style="margin: auto; width: 600px;  background-color: white; border: 10px solid #22c76e; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px;">
+  <body style="background: linear-gradient(224deg, #DD4723, black); background-size: 400% 400%; -webkit-animation: Green 30s ease infinite; -moz-animation: Green 30s ease infinite; animation: Green 30s ease infinite; font-family: 'Exo 2', sans-serif;">
+    <div style="margin: auto; width: 600px;  background-color: black; color: #fff; border: 8px solid #00e676; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px; border-bottom: 0px;">
+      
       <h1 style="font-size: 28pt; padding: 0; margin: 0; color: #DD4723">Dan Voronov / Дан Вóронов</h1>
+            <br><br><br>
+      <h2 style="padding: 0; margin: 0; color: gray"><a href="now/">NOW</a>
+        &nbsp;&nbsp;&nbsp;<a href="achivments/">BESIDE ART</a>
+        &nbsp;&nbsp;&nbsp;<a href="about/">ABOUT ME</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a
+          href="ru/">(/ru) СТАТЬИ</a> </h2>
+
       <br>
-      <i>For the past 10 years, I’ve been working on designing experiences and
-        journeys that touch people's inner Self.</i><br>
+              <hr style="border:0; border-top: 2px dotted #373737"><br><br>
+
+      <p style="line-height: 18pt; font-size: 16pt;"><b>My craft is unusual experiments in contemporary art</b>:  performance, anti-dance, electronic sounds, dramaturgy. <br>I pursue ideas that lead us beyond everyday life. There we can experience an unfamiliar states and feel something differently.</p>
+
+<p style="line-height: 18pt; font-size: 12pt;">I applied performance practices in the urban space, Butoh dance, mix of field recoding at Ableton software, verbatim in the doc theater, production of documentary and feature films to achieve this. I figured out post-drama theater, postmodernism and metamodernism. And I keep looking for new tools. <br> <span class="yellow-highlight">See artworks below...</span></p>
+
+     <br><br> <div style="text-align: center;"><a style="border-bottom: 0px" href="dan-files/i/under_the_brdge_f.jpg"
+          target="_blank"><img
+            src="dan-files/i/under_the_brdge.jpg"
+            style="height: 600px;"></a><br>
+      </div>       <i style="line-height: 12pt; font-size: 9pt;">For the past 10 years, I’ve been working on designing experiences and
+        journeys that touch people's inner Self.</i><br> <br><br>
+
+<p style="line-height: 18pt; font-size: 14pt;"><b>You can cooperate with me when somebody unusual is required.</b> Like participation in weird contemporary performance, creating a track from strange sounds, documentary theater on the topic nobody wants to talk about, etc. <br> <span class="yellow-highlight">See contacts at the bottom...</span></p>
+
+<p style="line-height: 12pt; font-size: 10pt;">Fortunately, can't help you with a ordinary art. Especially for TV. </p>
+
+<p style="line-height: 36pt; font-size: 28pt; background-color: #29b6f6; color: black; padding: 20px; ">I strongly want to do art things that no one has ever done before</p>
+
       <br>
+
       <h2>ARTWORKS</h2>
       <span style="font-size: 16pt;">Now I use my various skills to create <a href="art/hybridart/">hybrid
-          and interdisciplinary art</a> projects.</span>
+          and interdisciplinary art projects</a>.</span>
       <p style="line-height: 18pt; font-size: 14pt;">At the age of 32 I met the
         <a href="art/butoh/">Butoh dance</a> and became a member of the "ZA" dancing
         group. I also do solo <a href="art/performance/">urban performances</a>.</p>
@@ -41,31 +96,34 @@
           href="art/film/">film</a>
         and <a href="art/theater/">theater</a> projects. And my infinite love to
         sound in the <a href="art/music/">electro-musical</a> projects.</p>
-      <p style="line-height: 18pt; font-size: 12pt;">As a teenager I
+      <p style="line-height: 16pt; font-size: 10pt;">As a teenager I
           played guitar and drums, wrote poems and stories. I photographed on
           the "Zenit" camera. Then it became the basis for <a href="art/early/">early
             artworks</a>.<br>
       </p>
+
+
       <br><br>
-      <div style="text-align: center;"><a style="border-bottom: 0px" href="dan-files/i/under_the_brdge_f.jpg"
+                  <div style="text-align: center;"><a style="border-bottom: 0px" href="dan-files/i/dan_rooftop_f.jpg"
           target="_blank"><img
-            src="dan-files/i/under_the_brdge.jpg"
+            src="dan-files/i/dan_rooftop.jpg"
             style="height: 600px;"></a><br>
       </div>
-      <br><br><br>
-      <h2 style="padding: 0; margin: 0; color: gray"><a href="now/">NOW</a>
-        &nbsp;&nbsp;&nbsp;<a href="achivments/">BESIDE ART</a> &nbsp;&nbsp;&nbsp;<a
-          href="ru/">(/ru) СТАТЬИ</a>
-        &nbsp;&nbsp;&nbsp;<a href="about/">ABOUT ME</a> </h2>
-      <div style="padding-top: 45px">
-        <hr style="border:0; border-top: 2px dotted lightgray"></div>
-      <p style="font-size: 14pt; padding-top: 3px">Feel free to <a href="mailto:dan.voronov@pm.me">mail</a> or <a target="_blank" href="https://t.me/dan_voronov">telegram</a>
+
+      <br><br>
+      <p style="line-height: 18pt; font-size: 12pt;">Also I know how to master the organization aspect: spliting the process into stages and keeping track of deadlines. For the art to take place, it is necessary to find the equipment, gather the audience through the social network and conduct a reasonable discussion-analysis afterwards. I did all that for many times.</p>
+
+<p style="line-height: 18pt; font-size: 14pt;">But when there is a <span class="yellow-highlight">manager, food and budget</span>, I can put more attention into the idea itself. Offer and we’ll make interesting art.</p>
+
+
+    </div>
+    <div style="margin: auto; width: 600px;  background-color: #00e676; border: 8px solid #00e676; border-top: 0px; left: 0; top: -60px; right: 0; bottom: 0; padding: 30px">
+      <p style="font-size: 20pt; padding-top: 3px">Feel free to <a href="mailto:dan.voronov@pm.me">mail</a> or <a target="_blank" href="https://t.me/dan_voronov">telegram</a>
         me and follow in:</p>
-      <p style="font-size: 14pt">&gt; <a target="_blank" href="https://www.goodreads.com/danvoronov">goodreads (reading list)</a>
+      <p style="font-size: 16pt">&gt; <a target="_blank" href="https://www.goodreads.com/danvoronov">goodreads (reading list)</a>
         &gt; <a target="_blank" href="https://www.youtube.com/user/DanVoronov/videos">youtube</a>
         &gt; <a target="_blank" href="https://t.me/dv_prj">telegram (public)</a>
       </p>
-      <span style="font-size: 80%"></span>
     </div>
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
